# ddd-skeleton

./: Makefile  pyproject.toml  test.sh
