[tool.poetry]
name = "dddpy"
version = "0.0.1"
description = "DDD skeleton"
authors = ["vecktor <serhii@crystalogic.net>"]

[tool.poetry.dependencies]
python = "^3.10.2"
SQLAlchemy = "^1.4.34"
pydantic = "^1.9.0"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
shortuuid = "^1.0.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
pytest = "^7.1.1"
isort = "^5.10.1"
pylint = "^2.13.4"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
